force-app/main/default/objects/RecurringDonationChangeHistory__c/RecurringDonationChangeHistory__c.object-meta.xml
<CustomObject>
    <description>When &quot;Enable Recurring Donation Change History&quot; in NPSP Settings is enabled, NPSP creates a Recurring Donation Change History record each time the amount, schedule, or campaign fields of a Recurring Donation are updated.</description>
    <label>Recurring Donation Change History</label>
    <nameField>
        <displayFormat>RDCH-{0000000}</displayFormat>
        <label>Recurring Donation Change History Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Donation Change History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>