force-app/main/default/objects/RecurringDonationChangeHistory__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <description>The Effective Date of the Recurring Donation when this change occurred.</description>
    <inlineHelpText>The Effective Date of the Recurring Donation when this change occurred.</inlineHelpText>
    <label>Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>