force-app/main/default/objects/RecurringDonationChangeHistory__c/fields/NewAmount__c.field-meta.xml
<CustomField>
    <fullName>NewAmount__c</fullName>
    <description>The new Amount for the related Recurring Donation.</description>
    <inlineHelpText>The new Amount for the related Recurring Donation.</inlineHelpText>
    <label>New Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>