force-app/main/default/objects/RecurringDonationChangeHistory__c/fields/NewAnnualValue__c.field-meta.xml
<CustomField>
    <fullName>NewAnnualValue__c</fullName>
    <description>The new annual value for this Recurring Donation.</description>
    <inlineHelpText>The new annual value for this Recurring Donation.</inlineHelpText>
    <label>New Annual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>