force-app/main/default/objects/RecurringDonationChangeHistory__c/fields/NewCampaign__c.field-meta.xml
<CustomField>
    <fullName>NewCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The new Campaign for the related Recurring Donation.</description>
    <inlineHelpText>The new Campaign for the related Recurring Donation.</inlineHelpText>
    <label>New Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Recurring Donation Change History (New Campaign)</relationshipLabel>
    <relationshipName>RDChangeHistoryNewCampaign</relationshipName>
    <type>Lookup</type>
</CustomField>