force-app/main/default/objects/RecurringDonationChangeHistory__c/fields/NewExpectedTotalValue__c.field-meta.xml
<CustomField>
    <fullName>NewExpectedTotalValue__c</fullName>
    <description>The new expected total value for this Fixed Recurring Donation, based on the amount and schedule.</description>
    <inlineHelpText>The new expected total value for this Fixed Recurring Donation, based on the amount and schedule.</inlineHelpText>
    <label>New Expected Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>