force-app/main/default/objects/RecurringDonationChangeHistory__c/fields/NewInstallmentFrequency__c.field-meta.xml
<CustomField>
    <fullName>NewInstallmentFrequency__c</fullName>
    <description>The new Installment Frequency for the related Recurring Donation.</description>
    <inlineHelpText>The new Installment Frequency for the related Recurring Donation.</inlineHelpText>
    <label>New Installment Frequency</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>