force-app/main/default/objects/RecurringDonationChangeHistory__c/fields/NewInstallmentPeriod__c.field-meta.xml
<CustomField>
    <fullName>NewInstallmentPeriod__c</fullName>
    <description>The new Installment Period for the related Recurring Donation.</description>
    <inlineHelpText>The new Installment Period for the related Recurring Donation.</inlineHelpText>
    <label>New Installment Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>