force-app/main/default/objects/RecurringDonationChangeHistory__c/fields/NewStatusReason__c.field-meta.xml
<CustomField>
    <fullName>NewStatusReason__c</fullName>
    <description>The new Status Reason for the related Recurring Donation.</description>
    <inlineHelpText>The new Status Reason for the related Recurring Donation.</inlineHelpText>
    <label>New Status Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>