force-app/main/default/objects/RecurringDonationChangeHistory__c/fields/NewYearlyValue__c.field-meta.xml
<CustomField>
    <fullName>NewYearlyValue__c</fullName>
    <description>The new yearly value for this Recurring Donation.</description>
    <inlineHelpText>The new yearly value for this Recurring Donation.</inlineHelpText>
    <label>New Yearly Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>