force-app/main/default/objects/RecurringDonationChangeHistory__c/fields/PreviousAmount__c.field-meta.xml
<CustomField>
    <fullName>PreviousAmount__c</fullName>
    <description>The previous Amount for the related Recurring Donation.</description>
    <inlineHelpText>The previous Amount for the related Recurring Donation.</inlineHelpText>
    <label>Previous Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>