force-app/main/default/objects/RecurringDonationChangeHistory__c/fields/PreviousAnnualValue__c.field-meta.xml
<CustomField>
    <fullName>PreviousAnnualValue__c</fullName>
    <description>The previous annual value for this Recurring Donation.</description>
    <inlineHelpText>The previous annual value for this Recurring Donation.</inlineHelpText>
    <label>Previous Annual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>