force-app/main/default/objects/RecurringDonationChangeHistory__c/fields/PreviousCampaign__c.field-meta.xml
<CustomField>
    <fullName>PreviousCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The previous Campaign for the related Recurring Donation.</description>
    <inlineHelpText>The previous Campaign for the related Recurring Donation.</inlineHelpText>
    <label>Previous Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Recurring Donation Change History (Previous Campaign)</relationshipLabel>
    <relationshipName>RDChangeHistoryPreviousCampaign</relationshipName>
    <type>Lookup</type>
</CustomField>