force-app/main/default/objects/RecurringDonationChangeHistory__c/fields/PreviousExpectedTotalValue__c.field-meta.xml
<CustomField>
    <fullName>PreviousExpectedTotalValue__c</fullName>
    <description>The previous expected total value for this Fixed Recurring Donation, based on the amount and schedule.</description>
    <inlineHelpText>The previous expected total value for this Fixed Recurring Donation, based on the amount and schedule.</inlineHelpText>
    <label>Previous Expected Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>