force-app/main/default/objects/RecurringDonationChangeHistory__c/fields/PreviousInstallmentFrequency__c.field-meta.xml
<CustomField>
    <fullName>PreviousInstallmentFrequency__c</fullName>
    <description>The previous Installment Frequency for the related Recurring Donation.</description>
    <inlineHelpText>The previous Installment Frequency for the related Recurring Donation.</inlineHelpText>
    <label>Previous Installment Frequency</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>