force-app/main/default/objects/RecurringDonationChangeHistory__c/fields/PreviousInstallmentPeriod__c.field-meta.xml
<CustomField>
    <fullName>PreviousInstallmentPeriod__c</fullName>
    <description>The previous Installment Period for the related Recurring Donation.</description>
    <inlineHelpText>The previous Installment Period for the related Recurring Donation.</inlineHelpText>
    <label>Previous Installment Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>