force-app/main/default/objects/RecurringDonationChangeHistory__c/fields/PreviousPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PreviousPaymentMethod__c</fullName>
    <description>The previous Payment Method for the related Recurring Donation.</description>
    <inlineHelpText>The previous Payment Method for the related Recurring Donation.</inlineHelpText>
    <label>Previous Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>