force-app/main/default/objects/RecurringDonationChangeHistory__c/fields/PreviousStatus__c.field-meta.xml
<CustomField>
    <fullName>PreviousStatus__c</fullName>
    <description>The previous Status for the related Recurring Donation.</description>
    <inlineHelpText>The previous Status for the related Recurring Donation.</inlineHelpText>
    <label>Previous Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>