force-app/main/default/objects/RecurringDonationChangeHistory__c/fields/PreviousYearlyValue__c.field-meta.xml
<CustomField>
    <fullName>PreviousYearlyValue__c</fullName>
    <description>The previous yearly value for this Recurring Donation.</description>
    <inlineHelpText>The previous yearly value for this Recurring Donation.</inlineHelpText>
    <label>Previous Yearly Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>